# learning_tools

./: .gitignore  README.md
concepts/adaptive_mesh_but_it_is_snake/: README.md  snake.py
cuda-aware-mpi/: Makefile  README.md  aware.cu  unaware.cu
cupy/: README.md  build_caliper.sh  caliper_custom_mem_pool.py  cupy_mem_pool.py  custom_kernel_multi_gpu.py  custom_kernel_single_gpu.py  custom_mem_pool_gemm.py  hello_testing.cu  load_env.sh  mem_pool.py  non_pinned_gemm.py  pinned_gemm.py
cython/embedded/: README.md  script.py  setup.py  test.c  wrapper.pyx
cython/embedded_gpu_offloading/: README.md  a.py  meson.build  pyproject.toml
cython/embedded_gpu_offloading/wrapper/: meson.build  test.c  wrapper.pyx
cython/meson_library/: meson.build
cython/meson_library/wrapper/: meson.build  wrapper.pyx
fortran/asynch/: Makefile  asynch_omp_dc.f90  dc_omp.f90
fortran/benchmarks/: Makefile  README.md  data.txt  do_concurrent_v_benchmark.f90  get_plots.py  real-kfirst.f90  real.f90  real_openmp.f90  serial_buffer_benchmark.f90  validate.f90  vertical_benchmark.f90
fortran/benchmarks/cpu_v_gpu/: plot_speedup.py
fortran/benchmarks/data/: mi250x.txt  plot_all_gpus.py  pvc.txt  v100.txt
fortran/best_vv/: Makefile  jik.f90  jki.f90
fortran/complex_benchmark/: Makefile  real.f90
fortran/data_mapping/: Makefile  cartographer.f90
fortran/dgemm_playground/: CMakeLists.txt  README.md
fortran/dgemm_playground/source/: dgemm_benchmark.f90
fortran/dgemm_playground/source/lib/: lib_gemm.f90  lib_types.f90
fortran/do_concurrent/: Makefile  README.md  dc.f90  dc_pure_fortran.f90  hello.F90  load_gadi_env.sh  sanity_check.f90  sanity_check_dc.f90  sanity_check_openmp.f90
fortran/do_concurrent/benchmark/: Makefile  dc_dgemm.f90  do_dgemm.f90
fortran/function_pointers/: function_pointers.f90
fortran/mpi/: README.md  dc_scatter.f90
fortran/mpi_dc/: Makefile  gemm.f90
fortran/openmp_cpu_montecarlo/: CMakeLists.txt  README.md  montecarlo_v0.f90  montecarlo_v1.f90
fortran/overhead/omp_cuda/: Makefile  hybrid.f90  mega_kernel.cu  no_ovh.f90  ovh.f90
fortran/select_type_rank_example/: select_rank.f90  select_type.f90
gpu_mini_app/: meson.build  meson_options.txt  pyproject.toml  sample.c  test_mre.py
gpu_mini_app/gpu_mre/: __init__.py  core.pyx  kernels.c  kernels.h  meson.build
learning_fortran/: basics.md
omp_book/: fpm.toml  hello_from_omp.f90  loop_parallelism_pi.f90  naive_omp_paralle_dgemm.f90  omp_tasks_dc_pi.f90  seq_dc_pi.f90  sequential_pi.f90  spmd_pi.f90  vector_addition.f90
omp_offload/c_but_not_c/: Makefile  maps.c  sw_async.c  sw_cfl.f90  sw_cfl2.c  sw_cfl2.f90  sw_cfl2_mpi.c  sw_cfl2_mpi_nonblocking.c  sw_cuda_async.cu  sw_domain_openmp.c  sw_resident.c  sw_transfer.c  sw_verbose.c  sw_verbose.f90  sw_yieldstep.c  test_async.c  test_async_cuda.cu
omp_offload/c_but_not_c/serious_mini_app/: Makefile  int64_miniapp.c  miniapp_mpi.c  miniapp_mpi_nonblocking.c
omp_offload/c_but_not_c/tests/: maps.c
omp_offload/derived_type_shenanigans/: Makefile  memory_mappings.F90
omp_offload/fortran/: README.md  fpm.toml
omp_offload/fortran/app/: main.f90  naive.f90  normal.f90  struct.f90  target_enter.f90
omp_offload/fortran/src/: another_module.f90  omp_offloading.f90
omp_offload/nbody_in_fortran/: README.md  nbody_gpu.F90  nbody_gpu.f90
omp_offload/target_practice/: a.f90
omp_offload/tutorial/: Makefile  main.c  model.c  model.h
python/ocean/: ocean.py  plot.py
python/ocean/swe_output/: eta_step_00100.csv  eta_step_00200.csv  eta_step_00300.csv  eta_step_00400.csv  eta_step_00500.csv  eta_step_00600.csv  eta_step_00700.csv  eta_step_00800.csv  eta_step_00900.csv  eta_step_01000.csv  eta_step_01100.csv  eta_step_01200.csv  eta_step_01300.csv  eta_step_01400.csv  eta_step_01500.csv  eta_step_01600.csv  eta_step_01700.csv  eta_step_01800.csv  eta_step_01900.csv  eta_step_02000.csv  eta_step_02100.csv  eta_step_02200.csv  eta_step_02300.csv  eta_step_02400.csv  eta_step_02500.csv  eta_step_02600.csv  eta_step_02700.csv  eta_step_02800.csv  eta_step_02900.csv  eta_step_03000.csv  eta_step_03100.csv  eta_step_03200.csv  eta_step_03300.csv  eta_step_03400.csv  eta_step_03500.csv  eta_step_03600.csv  eta_step_03700.csv  eta_step_03800.csv  eta_step_03900.csv  eta_step_04000.csv  (+80 more)
